add homepage in package.json file after name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "online-course-landiing-page",
+  "homepage": "https://github.io/rohit3171999/online-course-landiing-page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
